# cuSZp

./: CMakeLists.txt  Config.cmake.in  LICENSE  README.md  appveyor.yml  codecov.yml
.github/: dependabot.yml
.github/workflows/: codecov.yml  coverage.yml
cmake/: Installing.cmake
examples/: CMakeLists.txt  README.md  cuSZp.cpp  cuSZp_2D_double.cpp  cuSZp_2D_float.cpp  cuSZp_3D_double.cpp  cuSZp_3D_float.cpp  cuSZp_gpu_f32_api.cpp  cuSZp_gpu_f64_api.cpp  cuSZp_test_f32.cpp  cuSZp_test_f32_1D.cpp  cuSZp_test_f32_2D.cpp  cuSZp_test_f32_3D.cpp  cuSZp_test_f64.cpp  cuSZp_test_f64_1D.cpp  cuSZp_test_f64_2D.cpp  cuSZp_test_f64_3D.cpp  example_cpu_api.cpp  example_gpu_api.cpp
examples/simple/: CMakeLists.txt  main.cpp
include/: cuSZp-entry.h  cuSZp.h  cuSZp_entry.h  cuSZp_f32.h
include/cuSZp/: cuSZp_entry_1D_f32.h  cuSZp_entry_1D_f64.h  cuSZp_entry_2D_f32.h  cuSZp_entry_2D_f64.h  cuSZp_entry_3D_f32.h  cuSZp_entry_3D_f64.h  cuSZp_entry_f32.h  cuSZp_entry_f64.h  cuSZp_kernels_1D_f32.h  cuSZp_kernels_1D_f64.h  cuSZp_kernels_2D_f32.h  cuSZp_kernels_2D_f64.h  cuSZp_kernels_3D_f32.h  cuSZp_kernels_3D_f64.h  cuSZp_kernels_f32.h  cuSZp_kernels_f64.h  cuSZp_timer.h  cuSZp_utility.h
python/: example-hpc.py  example-torch.py  pycuSZp.py
src/: cuSZp-compress.cu  cuSZp-compress.h  cuSZp-decompress.cu  cuSZp-decompress.h  cuSZp-entry.cu  cuSZp.cu  cuSZp_entry.cu  cuSZp_entry_1D_f32.cu  cuSZp_entry_1D_f64.cu  cuSZp_entry_2D_f32.cu  cuSZp_entry_2D_f64.cu  cuSZp_entry_3D_f32.cu  cuSZp_entry_3D_f64.cu  cuSZp_entry_f32.cu  cuSZp_entry_f64.cu  cuSZp_f32.cu  cuSZp_f64.cu  cuSZp_kernels_1D_f32.cu  cuSZp_kernels_1D_f64.cu  cuSZp_kernels_2D_f32.cu  cuSZp_kernels_2D_f64.cu  cuSZp_kernels_3D_f32.cu  cuSZp_kernels_3D_f64.cu  cuSZp_kernels_f32.cu  cuSZp_kernels_f64.cu  cuSZp_timer.cu  cuSZp_utility.cu  errorCheck.h  timingGPU.cu  timingGPU.h  utility.h
